--- a/source/sass/blocks/email-link.scss
+++ b/source/sass/blocks/email-link.scss
@@ -2,6 +2,7 @@
   border-bottom: 1px solid $accent-color;
   color: inherit;
   text-decoration: none;
+  padding-bottom: 7px;
 
   &:hover {
     color: $link-hover-color;
