--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,17 +7,25 @@
   text-decoration: none;
   color: $primary-color;
   background-color: $white;
-  border: 2px solid $primary-color;
+  outline: 2px solid $primary-color;
+  outline-offset: -2px;
   padding: 16px 0;
   display: block;
 
   &:hover {
     color: $white;
     background-color: $primary-color;
+    transition: 0.5s;
   }
 
   &:active {
     color: rgba($white, 0.3);
     background-color: $primary-color;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .button {
+    font-size: 17px;
   }
 }
