--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,14 +6,24 @@
 }
 
 .form__title {
+  font-size: 17px;
+  line-height: 16px;
   color: $accent-color;
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 5px;
   padding: 0;
-  padding-right: 15px;
+  padding-right: 23px;
   background-color: $white;
   width: fit-content;
+
+  &--color {
+    padding-right: 16px;
+  }
+
+  &--name {
+    padding-right: 18px;
+  }
 }
 
 .form__title-wrapper {
@@ -52,13 +62,20 @@
   margin: 0;
 
   &--radio,
-  &--checkbox,
-  &--text {
+  &--checkbox {
     padding-top: 30px;
+  }
+
+  &--text {
+    padding-top: 26px;
   }
 }
 
 .form__item:not(:last-child) {
+  margin-bottom: 23px;
+}
+
+.form__item--checkbox:not(:last-child) {
   margin-bottom: 43px;
 }
 
@@ -67,7 +84,7 @@
   font-size: 14px;
   line-height: 16px;
   color: $primary-color;
-  margin: 17px 0 30px;
+  margin: 14px 0 30px;
 }
 
 .form__input {
@@ -75,6 +92,7 @@
   box-sizing: border-box;
 
   &::placeholder {
+    font-family: $font-family;
     font-size: 17px;
     line-height: 18px;
     opacity: 0.3;
@@ -87,6 +105,11 @@
     border: none;
     border-bottom: 2px solid $secondary-color;
     padding: 17px 10px 17px 0;
+  }
+
+
+  &--text {
+    padding: 21px 10px 13px 0;
   }
 
   &--phone,
@@ -104,8 +127,8 @@
     border: 2px solid $primary-color;
     width: 100%;
     min-height: 142px;
-    padding: 17px;
-    margin-top: 23px;
+    padding: 15px;
+    margin-top: 18px;
   }
 
 
@@ -140,17 +163,34 @@
 }
 
 .form__button {
+  font-size: 17px;
+  line-height: 16px;
   width: 100%;
 }
 
 @media (min-width: $tablet-width) {
   .form__group {
     position: relative;
-    padding: 50px 50px 50px 217px;
     margin-bottom: 0;
 
     &--radio {
-      padding-top: 0;
+      padding: 0 50px 68px 236px;
+    }
+
+    &--checkbox {
+      padding: 64px 67px 12px 236px;
+    }
+
+    &--text {
+      padding: 47px 50px 50px 218px;
+    }
+
+    &--contacts {
+      padding: 47px 50px 30px 218px;
+    }
+
+    &--add {
+      padding: 50px 50px 50px 218px;
     }
   }
 
@@ -200,6 +240,10 @@
     margin-bottom: 58px;
   }
 
+  .form__item--text:not(:last-child) {
+    margin-bottom: 23px;
+  }
+
   .form__label {
     font-size: 19px;
 
@@ -210,17 +254,21 @@
   }
 
   .form__input {
+    font-size: 19px;
+    line-height: 18px;
+
     &--text {
-      margin-left: 27px;
-      padding: 16px 0 18px 10px;
+      margin-left: 24px;
+      padding: 16px 0 14px 19px;
     }
 
     &--phone {
-      padding: 14px 0 20px 17px;
+      padding: 14px 0 17px 17px;
       background-color: transparent;
 
       & + svg {
         right: 26px;
+        top: 3px;
       }
     }
 
@@ -230,12 +278,17 @@
 
       & + svg {
         right: 22px;
+        top: 10px;
       }
     }
 
     &--textarea {
       margin-top: 0;
     }
+  }
+
+  .form__wrapper {
+    margin-bottom: 19px;
   }
 
   .form__footer {
@@ -272,22 +325,50 @@
       background-color: $background-section-color;
     }
 
-    &--checkbox {
-      padding-right: 100px;
+    &--radio {
+      padding: 0 225px 64px 244px;
     }
 
-    &--radio {
-      padding-top: 0;
+    &--checkbox {
+      padding: 68px 100px 9px 244px;
+    }
+
+    &--text {
+      padding: 48px 225px 50px 228px;
+    }
+
+    &--contacts {
+      padding-bottom: 31px;
+    }
+
+    &--add {
+      padding-bottom: 47px;
     }
   }
 
   .form__title-wrapper {
-    left: 97px;
+    left: 112px;
   }
 
   .form__list {
     &--checkbox {
+      gap: 0;
       grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+  .form__input {
+    &--phone {
+      padding-bottom: 14px;
+
+      & + svg {
+        right: 7px;
+        top: 0;
+      }
+    }
+
+    &--email + svg {
+      right: 5px;
     }
   }
 
