--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,6 +1,23 @@
+.main-header__wrapper {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    background-color: $border-color;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .main-header__wrapper {
     padding: 0 50px;
+
+    &::before {
+      content: none;
+    }
   }
 }
 
