--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -6,22 +6,7 @@
 
 .main-nav__logo {
   align-self: center;
-  padding: 22px 0;
-}
-
-.main-nav__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  font-size: 17px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-
-  &--promo {
-    font-size: 15px;
-    display: none;
-  }
+  padding: 20px 0 18px;
 }
 
 .main-nav__link {
@@ -156,8 +141,6 @@
   }
 
   .main-nav__list {
-    flex-direction: row;
-
     &--site {
       grid-column: 1/3;
       order: 3;
@@ -173,58 +156,17 @@
         background-color: $inner-header-bg-color;
         border-top: 1px solid $border-color;
       }
-
-      .main-nav__item {
-        width: 50%;
-      }
-
-      .main-nav__link {
-        padding: 20px 0;
-        font-size: 15px;
-        line-height: 24px;
-      }
     }
 
     &--user {
       grid-column: 2/4;
       justify-self: end;
-
-      .main-nav__link {
-        border-left: 1px solid $border-color;
-      }
     }
   }
 
   .main-nav__link {
     padding: 32px 0 31px;
     box-shadow: none;
-
-    &--search {
-      width: 82px;
-      height: 88px;
-      padding: 0;
-
-      span {
-        display: none;
-      }
-    }
-
-    &--cart {
-      padding-left: 85px;
-    }
-  }
-
-  .main-nav__link--search .main-nav__link-icon {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-
-  .main-nav__link--cart .main-nav__link-icon {
-    left: 31px;
-    top: 35px;
   }
 
   .main-nav__text {
@@ -242,7 +184,7 @@
 
 @media (min-width: $desktop-width) {
   .main-nav {
-    grid-template-columns: 43% 15% 42%;
+    grid-template-columns: 39% 1fr 42%;
   }
 
   .main-nav__list {
@@ -254,41 +196,21 @@
       &::before {
         content: none;
       }
-
-      .main-nav__link {
-        padding: 32px 0 31px;
-        width: 184px;
-        border-left: 1px solid $border-color;
-        padding-left: 35px;
-        font-size: 17px;
-
-        &--catalog {
-          padding-left: 0;
-          border: none;
-        }
-      }
     }
 
     &--promo {
-      display: flex;
       order: 4;
       position: relative;
-      justify-content: space-between;
 
       &::before {
         content: "";
         position: absolute;
-        left: calc((100vw - 100% / 0.43) / 2 * -1);
+        left: calc((100vw - 1050px) / 2 * -1);
         height: 100%;
         width: 100vw;
         z-index: -10;
         background-color: $inner-header-bg-color;
         border-top: 1px solid $border-color;
-      }
-
-      .main-nav__link {
-        padding: 20px 0;
-        width: 184px;
       }
     }
 
@@ -300,6 +222,8 @@
 
   .main-nav__logo {
     order: 2;
+    margin-left: 45px;
+    margin-top: 9px;
   }
 
   .main-nav__text {
