--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -53,7 +53,7 @@
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding-top: 22px;
+  padding-top: 24px;
 
   &::before {
     content: "";
@@ -102,7 +102,7 @@
     flex-direction: column;
     width: 50%;
     box-sizing: border-box;
-    padding: 27px 32px 25px 34px;
+    padding: 26px 32px 25px;
   }
 
   .product-card__title {
