--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -32,7 +32,7 @@
 
 .production__video-wrapper {
   position: relative;
-  margin-bottom: 35px;
+  margin-bottom: 28px;
 }
 
 .production__video {
@@ -73,7 +73,7 @@
 
 @media (min-width: $tablet-width) {
   .production {
-    margin: 0 50px 58px;
+    margin: 0 50px 65px;
   }
 
   .production__wrapper {
@@ -83,7 +83,7 @@
 
   .production__video-wrapper {
     order: -1;
-    margin-bottom: 41px;
+    margin-bottom: 35px;
   }
 
   .production__video {
@@ -96,15 +96,15 @@
     padding: 0 107px 25px;
 
     &::before {
-      left: 42px;
-      top: 0;
+      left: 41px;
+      top: -5px;
     }
   }
 
   .production__text {
     font-size: 15px;
     line-height: 30px;
-    margin: 0 40px 41px;
+    margin: 0 40px 38px;
   }
 
   .production__button {
@@ -145,6 +145,7 @@
 
     &::before {
       left: 0;
+      top: 5px;
     }
   }
 
