--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,6 +1,6 @@
 .social-list {
   list-style-type: none;
-  padding: 30px 0;
+  padding: 30px 0 22px;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -29,5 +29,9 @@
 @media (min-width: $tablet-width) {
   .social-list {
     padding: 0;
+  }
+
+  .social-list__item:not(:last-child) {
+    margin-right: 29px;
   }
 }
