--- a/source/sass/blocks/table.scss
+++ b/source/sass/blocks/table.scss
@@ -1,9 +1,23 @@
 .table {
-  line-height: 20px;
+  line-height: 16px;
   border-collapse: collapse;
 }
 
 .table__row td {
   border-bottom: 1px solid $border-color;
   padding: 12px 0;
+}
+
+@media (min-width: $tablet-width) {
+  .table {
+    line-height: 20px;
+  }
+
+  .table__row td {
+    padding: 10px 0;
+
+    &:first-child {
+      width: 33%;
+    }
+  }
 }
