--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,9 @@
 @import "blocks/page.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/user-list.scss";
+@import "blocks/promo-list.scss";
 @import "blocks/title.scss";
 @import "blocks/categories-list.scss";
 @import "blocks/inner-header.scss";
