--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -96,7 +96,7 @@
   .reviews {
     max-width: 1050px;
     margin: 0 auto;
-    padding: 0 50px 70px;
+    padding: 0 0 70px;
   }
 
   .reviews__wrapper {
