--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -96,7 +96,7 @@
 
 @media (min-width: $desktop-width) {
   .special__wrapper {
-    padding: 132px 50px 95px;
+    padding: 132px 0 95px;
     max-width: 1050px;
     margin: 0 auto;
   }
