--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,5 @@
 @import "blocks/main-inner.scss";
 @import "blocks/zigzag.scss";
 @import "blocks/control.scss";
+@import "blocks/modal.scss";
+@import "blocks/modal-size.scss";
