--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -9,6 +9,11 @@
   padding: 20px 0 18px;
 }
 
+.main-nav__logo-image {
+  width: 86px;
+  height: 35px;
+}
+
 .main-nav__link {
   font-weight: 700;
   color: $secondary-color;
@@ -140,6 +145,12 @@
     }
   }
 
+  .main-nav__logo-image {
+    width: 113px;
+    height: 46px;
+  }
+
+
   .main-nav__list {
     &--site {
       grid-column: 1/3;
@@ -224,6 +235,11 @@
     order: 2;
     margin-left: 45px;
     margin-top: 9px;
+  }
+
+  .main-nav__logo-image {
+    width: 137px;
+    height: 66px;
   }
 
   .main-nav__text {
