--- a/10/css/style.css
+++ b/10/css/style.css
@@ -71,6 +71,11 @@
   padding: 20px 0 18px;
 }
 
+.main-nav__logo-image {
+  width: 86px;
+  height: 35px;
+}
+
 .main-nav__link {
   font-weight: 700;
   color: #000000;
@@ -195,6 +200,11 @@
     opacity: 0.3;
   }
 
+  .main-nav__logo-image {
+    width: 113px;
+    height: 46px;
+  }
+
   .main-nav__list--site {
     grid-column: 1/3;
     order: 3;
@@ -266,6 +276,11 @@
     order: 2;
     margin-left: 45px;
     margin-top: 9px;
+  }
+
+  .main-nav__logo-image {
+    width: 137px;
+    height: 66px;
   }
 
   .main-nav__text {
@@ -615,6 +630,7 @@
 
 .special__image {
   width: 100%;
+  height: auto;
   max-width: 320px;
   display: block;
   margin: 0 auto 25px;
@@ -664,8 +680,6 @@
   }
 
   .special__image {
-    width: 100%;
-    height: auto;
     position: absolute;
     right: -100%;
     bottom: 0;
@@ -690,7 +704,6 @@
   }
 
   .special__header {
-    flex-direction: row-reverse;
     justify-content: start;
     margin-bottom: 30px;
   }
@@ -700,6 +713,7 @@
   }
 
   .special__tag {
+    order: -1;
     margin: 0 43px 14px 32px;
   }
 
@@ -1839,6 +1853,11 @@
   width: 100%;
 }
 
+@media (min-width: 334px) {
+  .form__list--radio .form__item {
+    margin-bottom: 36px;
+  }
+}
 @media (min-width: 768px) {
   .form__group {
     position: relative;
