--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -21,8 +21,10 @@
   &::before {
     content: "";
     position: absolute;
-    top: 35px;
+    top: 0;
+    bottom: 0;
     left: 34px;
+    margin: auto 0;
     width: 33px;
     height: 33px;
     background-image: url("../img/production-video.svg");
