--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -46,7 +46,10 @@
   padding: 0;
   margin: 0;
 
-  &--radio,
+  &--radio {
+    margin-bottom: 28px;
+  }
+
   &--checkbox {
     margin-bottom: 43px;
   }
@@ -67,7 +70,7 @@
   }
 
   &--text {
-    padding-top: 26px;
+    padding-top: 23px;
   }
 }
 
@@ -77,6 +80,12 @@
 
 .form__item--checkbox:not(:last-child) {
   margin-bottom: 43px;
+}
+
+.form__list--radio {
+  .form__item {
+    min-height: 36px;
+  }
 }
 
 .form__add-text {
@@ -165,14 +174,6 @@
   font-size: 17px;
   line-height: 16px;
   width: 100%;
-}
-
-@media (min-width: 334px) {
-  .form__list--radio {
-    .form__item {
-      margin-bottom: 36px;
-    }
-  }
 }
 
 @media (min-width: $tablet-width) {
