--- a/10/css/style.css
+++ b/10/css/style.css
@@ -1527,8 +1527,10 @@
 .production__title::before {
   content: "";
   position: absolute;
-  top: 35px;
+  top: 0;
+  bottom: 0;
   left: 34px;
+  margin: auto 0;
   width: 33px;
   height: 33px;
   background-image: url("../img/production-video.svg");
@@ -1754,7 +1756,10 @@
   padding: 0;
   margin: 0;
 }
-.form__group--radio, .form__group--checkbox {
+.form__group--radio {
+  margin-bottom: 28px;
+}
+.form__group--checkbox {
   margin-bottom: 43px;
 }
 .form__group--text {
@@ -1770,7 +1775,7 @@
   padding-top: 30px;
 }
 .form__list--text {
-  padding-top: 26px;
+  padding-top: 23px;
 }
 
 .form__item:not(:last-child) {
@@ -1779,6 +1784,10 @@
 
 .form__item--checkbox:not(:last-child) {
   margin-bottom: 43px;
+}
+
+.form__list--radio .form__item {
+  min-height: 36px;
 }
 
 .form__add-text {
@@ -1853,11 +1862,6 @@
   width: 100%;
 }
 
-@media (min-width: 334px) {
-  .form__list--radio .form__item {
-    margin-bottom: 36px;
-  }
-}
 @media (min-width: 768px) {
   .form__group {
     position: relative;
@@ -2158,7 +2162,9 @@
 .control__mark {
   position: absolute;
   left: 0;
-  top: -10px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
   width: 35px;
   height: 35px;
   border: 2px solid #444444;
