--- a/source/sass/blocks/inner-header.scss
+++ b/source/sass/blocks/inner-header.scss
@@ -3,6 +3,7 @@
   width: 260px;
   text-align: center;
   margin: 0 auto 120px auto;
+  font-size: 27px;
 }
 
 .inner-header {
@@ -47,6 +48,7 @@
   .inner-header__title {
     margin: 0 auto 372px auto;
     width: 668px;
+    font-size: 43px;
   }
 
   .inner-header__wrapper {
@@ -74,6 +76,7 @@
   .inner-header__title {
     margin: 0 auto 355px auto;
     width: 700px;
+    font-size: 53px;
   }
 
   .inner-header__wrapper {
