--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -16,7 +16,7 @@
 }
 
 .special__description {
-  margin: 0 0 15px 0;
+  margin: 0 0 17px;
 }
 
 .special__table {
@@ -36,7 +36,7 @@
   font-weight: 700;
   font-size: 17px;
   text-align: center;
-  margin: 0 0 25px 0;
+  margin: 0 0 22px 0;
 }
 
 .special__button {
