--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts__wrapper {
-  padding-top: 40px;
+  padding-top: 37px;
 }
 
 .contacts__top {
@@ -12,8 +12,8 @@
 
 .contacts__map-wrapper {
   width: 100%;
-  height: 450px;
-  margin-bottom: 40px;
+  height: 454px;
+  margin-bottom: 43px;
 }
 
 .contacts__map-iframe {
@@ -26,7 +26,7 @@
   font-size: 14px;
   line-height: 30px;
   border-collapse: collapse;
-  margin: 0 0 60px;
+  margin: 0 0 50px;
   width: 100%;
 }
 
@@ -47,6 +47,10 @@
 
 .contacts__table tr {
   display: flex;
+
+  &:not(:last-child) {
+    margin-bottom: 7px;
+  }
 }
 
 .contacts__write {
@@ -103,7 +107,7 @@
   .contacts__map-wrapper {
     width: 100%;
     height: 457px;
-    margin-bottom: 55px;
+    margin-bottom: 58px;
   }
 
   .contacts__write {
@@ -147,10 +151,6 @@
 
   .contacts__table tr {
     width: 100%;
-
-    &:not(:first-child) {
-      margin-top: 7px;
-    }
   }
 
   .contacts__map-wrapper {
