--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,6 +1,6 @@
 .social-list {
   list-style-type: none;
-  padding: 30px 0 22px;
+  padding: 28px 0 24px;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .social-list__item:not(:last-child) {
-  margin-right: 32px;
+  margin-right: 29px;
 }
 
 .social-list__link {
@@ -29,6 +29,7 @@
 @media (min-width: $tablet-width) {
   .social-list {
     padding: 0;
+    align-self: flex-end;
   }
 
   .social-list__item:not(:last-child) {
