--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -135,6 +135,7 @@
 
   .main-nav__logo {
     padding: 0;
+    margin-top: 8px;
 
     &:hover {
       opacity: 0.6;
@@ -233,13 +234,13 @@
 
   .main-nav__logo {
     order: 2;
-    margin-left: 45px;
+    margin-left: 42px;
     margin-top: 9px;
   }
 
   .main-nav__logo-image {
-    width: 137px;
-    height: 66px;
+    width: 147px;
+    height: 69px;
   }
 
   .main-nav__text {
