--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -50,10 +50,10 @@
     position: relative;
     background-image: url("../img/review-bg-tablet.jpg");
     background-repeat: no-repeat;
+    background-size: auto 100%;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/review-bg-tablet@2x.jpg");
-      background-size: 350px auto;
     }
   }
 
@@ -96,11 +96,11 @@
   .reviews {
     max-width: 1050px;
     margin: 0 auto;
-    padding: 0 0 70px;
+    padding: 0 0 90px;
   }
 
   .reviews__wrapper {
-    padding: 80px 0 115px 175px;
+    padding: 80px 0 95px 175px;
     max-width: 1150px;
     background-image: url("../img/review-bg-desktop.jpg");
 
