--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -44,6 +44,10 @@
     border-radius: 50%;
     background-color: $accent-color;
   }
+
+  &:focus ~ .control__mark {
+    border-color: $accent-color;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -51,7 +55,6 @@
     width: 48px;
     height: 48px;
     left: -17px;
-    top: -17px;
   }
 
   .control__input {
